--- a/public/assets/css/input.css
+++ b/public/assets/css/input.css
@@ -8,7 +8,7 @@
     }
 
     a:hover {
-        @apply transition duration-500 ease-in-out text-[#33CCFF];
+        @apply transition duration-500 ease-in-out text-[#00ffff];
     }
 
     h1 > a,
