Add table of contents

--- a/public/assets/css/input.css
+++ b/public/assets/css/input.css
@@ -77,6 +77,10 @@
         @apply list-disc;
     }
 
+    ul ul {
+        list-style-type: circle;
+    }
+
     ol {
         @apply list-decimal;
     }
