--- a/public/assets/css/input.css
+++ b/public/assets/css/input.css
@@ -11,6 +11,10 @@
         @apply transition duration-500 ease-in-out text-[#00ffff];
     }
 
+    a:active {
+        @apply text-[#00ffff];
+    }
+
     h1 > a,
     h2 > a,
     h3 > a {
