--- a/public/assets/css/input.css
+++ b/public/assets/css/input.css
@@ -84,6 +84,10 @@
         @apply border-l-4 border-solid border-[#3366FF] p-4 text-[#ffffff];
     }
 
+    .dialogue {
+        @apply py-0;
+    }
+
     blockquote {
         @apply italic;
     }
