Add my-8 to figure captions

--- a/public/assets/css/input.css
+++ b/public/assets/css/input.css
@@ -122,7 +122,7 @@
     }
 
     figcaption {
-        @apply text-[#999999] text-center text-sm;
+        @apply text-[#999999] text-center text-md my-2;
     }
 
     sup {
