--- a/public/assets/css/input.css
+++ b/public/assets/css/input.css
@@ -3,11 +3,12 @@
 @tailwind utilities;
 
 .grad-bg {
-  background: linear-gradient(to bottom, #000033 0rem, black 24rem, black 100%) no-repeat,
-              linear-gradient(to top, #000033 0rem, black 24rem, black 100%) no-repeat,
-              black; /* Fallblack */
-  background-size: 100% 24rem, 100% 24rem, 100%;
-  background-position: top, bottom, center;
+    background: linear-gradient(to bottom, #000033 0rem, black 24rem, black 100%) no-repeat,
+                linear-gradient(to top, #000033 0rem, black 24rem, black 100%) no-repeat,
+                black; /* Fallblack */
+    background-size: 100% 24rem, 100% 24rem, 100%;
+    background-position: top, bottom, center;
+    min-height: 100vh; /* Ensures the gradient covers the full viewport height */
 }
 
 @layer base {
